...
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="sign_in">Sign In</string>
    <string name="emailLogin">Email Login</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="geofence_added">Geofence added</string>
    <string name="location_granted">Location Granted</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

